@@ -637,6 +637,7 @@ Other memory:
 
 	* Imported uIP into the tree (see
 	   http://www.sics.se/~adam/uip/index.php/Main_Page)
+	* Adding socket(), bind(), connect()
 </pre></ul>
 
 <table width ="100%">
